--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -1,6 +1,19 @@
 .inventory-list {
     padding: 20px;
+    
+    
+    .radio-group {
+      margin-bottom: 10px;
+      border:1px solid #666;
+
+      .radio {
+        margin: 10px 20px;
+        margin-bottom: 10px;
+      }
+
+    }
   
+    /*
     .search-bar {
       display: flex;
       justify-content: space-between;
@@ -24,7 +37,7 @@
         color: #fff;
         border-radius: 18px;
       }
-    }
+    } */
   
     .list {
       .item {
