--- a/src/pages/stockNav/index.scss
+++ b/src/pages/stockNav/index.scss
@@ -8,17 +8,17 @@
     flex-direction: column;
     width:70%;
     //align-items: center;
+    .divider {
+      border-top: 1px solid #ccc;
+      margin: 10px 0;
+    }
     .btn {
       margin: 10px;
-      
-      //padding: 10px 20px;
       font-size: 32px;
       background-color: lightgreen;
       color: #000;
       //border: none;
       border-radius: 10px;
-      //cursor: pointer;
-      //transition: background-color 0.3s;
     }
     .btn:hover {
       background-color: #40a9ff;
