--- a/src/pages/stockOperation/index.scss
+++ b/src/pages/stockOperation/index.scss
@@ -1,6 +1,13 @@
 .inventory-list {
   padding: 5px 20px;
 
+  .operation-type{
+    margin: 0 20px 15px;
+    .radio{
+      margin-right: 30px;
+    }
+  }
+
   .search-bar {
     display: flex;
     justify-content: space-between;
@@ -35,6 +42,7 @@
       //vertical-align: c;
       //height: 50px;
       padding-top: 10px;
+      margin-bottom: 15px;
       .productName {
         width: 45%;
         border-right: 1px solid green;
