修改出库展示样式,增加出库备注栏textarea

--- a/src/pages/stockAdd/index.scss
+++ b/src/pages/stockAdd/index.scss
@@ -16,6 +16,8 @@
         color: #666;
         margin-left: 10px;
       }
+
+      
     }
   }
 
@@ -38,6 +40,12 @@
       font-size: 28px;
       font-weight: bold;
       border-radius: 8px;
+    }
+    .textarea_value{
+      border:1px solid #ccc;
+      width:100%;
+      margin-bottom: 40px;
+      font-size: 28px;
     }
   }
 
