--- a/src/pages/stockOperation/index.scss
+++ b/src/pages/stockOperation/index.scss
@@ -110,7 +110,7 @@
           width: 60%;
         }
         .operationQuantity {
-          font-size: 24px; /* 数量字体大小为 24px */
+          font-size: 28px; /* 数量字体大小为 24px */
           color: #333;
           width: 20%;
         }
@@ -165,6 +165,11 @@
 
     }
   }
-  
+  .reach-bottom{
+    margin: 10px 0;
+  }
+  .all-data-loaded{
+    margin: 10px 0;
+  }
   
 }
