加入永和鲁润登录验证,不能互看

--- a/src/pages/stockOperation/index.scss
+++ b/src/pages/stockOperation/index.scss
@@ -135,7 +135,7 @@
       .card-body {
         margin-bottom: 10px;
         border: 1px solid #e0fbe4;
-        background-color:#c7f5cf;
+        background-color:#f1faf3;
         border-radius: 4px;
         padding: 0 10px ;
         .extra {
