--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -5,7 +5,8 @@
     .radio-group {
       margin-bottom: 10px;
       border:1px solid #666;
-
+      font-size: 36px;
+      font-weight: bold;
       .radio {
         margin: 10px 20px;
         margin-bottom: 10px;
@@ -50,13 +51,13 @@
         margin-bottom: 10px;
   
         .name {
-          font-size: 28px;
+          font-size: 36px;
           font-weight: bold;
           width:50%;
         }
   
         .quantity {
-          font-size: 28px;
+          font-size: 36px;
           color: #666;
           width:15%;
           font-family: 'Times New Roman', Times, serif;
@@ -67,16 +68,17 @@
           display: flex;
   
           .action-btn {
+            display: flex;
             margin-right: 10px;
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bold;
-            padding: 4px 8px;
+            padding: 0px 8px;
             border-radius: 12px;
   
             &.stock-out-btn {
               background-color: #00cd00;
               color: #050505;
-              margin-right: 40px;
+              margin-right: 30px;
             }
   
             &.stock-in-btn {
