--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -1,95 +1,83 @@
 .inventory-list {
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 居中对齐 */
+  margin: 5px 2%;
+  max-width: 96%; /* 最大宽度为屏幕宽度 */
 
-   
-    
-    
+  .navbar{
+    position: a;
+    top: 0;
     .radio-group {
       margin-bottom: 10px;
-      border:1px solid #666;
+      border: 1px solid #666;
+      border-radius: 8px;
       font-size: 36px;
       font-weight: bold;
+      max-width: 100%; /* 最大宽度为屏幕宽度 */
+  
       .radio {
         margin: 10px 10px;
-        margin-bottom: 10px;
       }
-
     }
+  }
   
-    /*
-    .search-bar {
+
+  .list {
+    width: 100%; /* 让列表占满宽度 */
+    max-width: 100%; /* 最大宽度为屏幕宽度 */
+    .item {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 20px;
-  
-      .search-input {
-        flex: 1;
-        width: 70%;
-        height: 70px;
-        padding: 0 12px;
-        border: 1px solid #ccc;
-        border-radius: 18px;
+      align-items: center;
+      padding: 10px;
+      border: 1px solid #eee;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      width: 100%; /* 让每个条目占满宽度 */
+      max-width: 100%; /* 最大宽度为屏幕宽度 */
+
+      .name {
+        font-size: 36px;
+        font-weight: bold;
+        width: 50%;
+        max-width: 50%; /* 最大宽度为父元素的50% */
+        overflow: hidden; /* 超出部分隐藏 */
+        white-space: nowrap; /* 不换行 */
+        text-overflow: ellipsis; /* 超出显示省略号 */
       }
-  
-      .search-btn {
-        width: 30%;
-        height: 70px;
-        line-height: 66px;
-        text-align: center center;
-        background-color: #bedda5;
-        color: #fff;
-        border-radius: 18px;
+
+      .quantity {
+        font-size: 36px;
+        color: #666;
+        width: 15%;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: bold;
       }
-    } */
-  
-    .list {
-      .item {
+
+      .actions {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px;
-        border: 1px solid #eee;
-        border-radius: 8px;
-        margin-bottom: 10px;
-  
-        .name {
-          font-size: 36px;
-          font-weight: bold;
-          width:50%;
-        }
-  
-        .quantity {
-          font-size: 36px;
-          color: #666;
-          width:15%;
-          font-family: 'Times New Roman', Times, serif;
-          font-weight: bold;
-        }
-  
-        .actions {
+
+        .action-btn {
           display: flex;
-  
-          .action-btn {
-            display: flex;
-            margin-right: 10px;
-            font-size: 28px;
-            font-weight: bold;
-            padding: 0px 8px;
-            border-radius: 12px;
-  
-            &.stock-out-btn {
-              background-color: #00cd00;
-              color: #050505;
-              margin-right: 30px;
-            }
-  
-            &.stock-in-btn {
-              background-color: #ff6347;
-              color: #050505;
-            }
+          margin-right: 10px;
+          font-size: 28px;
+          font-weight: bold;
+          padding: 0px 8px;
+          border-radius: 12px;
+
+          &.stock-out-btn {
+            background-color: #00cd00;
+            color: #050505;
+            margin-right: 30px;
+          }
+
+          &.stock-in-btn {
+            background-color: #ff6347;
+            color: #050505;
           }
         }
       }
     }
   }
-  
+}
