--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -41,11 +41,10 @@
         font-size: 36px;
         font-weight: bold;
         width: 50%;
-        max-width: 50%; /* 最大宽度为父元素的50% */
-        overflow: hidden; /* 超出部分隐藏 */
-        white-space: nowrap; /* 不换行 */
-        text-overflow: ellipsis; /* 超出显示省略号 */
+        max-width: 50%;
+        white-space: normal; /* 允许换行 */
       }
+      
 
       .quantity {
         font-size: 36px;
