--- a/src/pages/stockOperation/index.scss
+++ b/src/pages/stockOperation/index.scss
@@ -176,10 +176,19 @@
   .reach-bottom{
     margin: 10px 0;
     text-align: center;
+    font-size: 36px;
+    height: 100px;
+    border: 1px solid yellowgreen;
+    line-height: 100px; /* 设置和容器高度相同的 line-height */
   }
   .all-data-loaded{
     margin: 10px 0;
     text-align: center;
+    height: 100px;
+    font-size: 36px;
+    color: yellowgreen;
+    //border: 1px solid yellowgreen;
+    line-height: 100px; /* 设置和容器高度相同的 line-height */
   }
   
 }
