--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -25,17 +25,18 @@
 
   .list {
     width: 100%; /* 让列表占满宽度 */
-    max-width: 100%; /* 最大宽度为屏幕宽度 */
+    max-width: 98%; /* 最大宽度为屏幕宽度 */
+    border-radius: 8px;
     .item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px;
+      padding: 10px 5px;
       border: 1px solid #eee;
       border-radius: 8px;
       margin-bottom: 10px;
       width: 100%; /* 让每个条目占满宽度 */
-      max-width: 100%; /* 最大宽度为屏幕宽度 */
+      //max-width: 100%; /* 最大宽度为屏幕宽度 */
 
       .name {
         font-size: 36px;
