--- a/src/pages/product/index.scss
+++ b/src/pages/product/index.scss
@@ -1,31 +1,29 @@
 .inventory-list {
-    padding: 20px;
-  
-    .search-bar {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-  
-      .search-input {
-        flex: 1;
-        width: 70%;
-        height: 70px;
-        padding: 0 12px;
-        border: 1px solid #ccc;
-        border-radius: 18px;
-      }
-  
-      .search-btn {
-        width: 30%;
-        height: 70px;
-        line-height: 66px;
-        text-align: center center;
-        background-color: #bedda5;
-        color: #fff;
-        border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 居中对齐 */
+  margin: 5px 2.5%;
+  max-width: 95%; /* 最大宽度为屏幕宽度 */
+
+    .navbar{
+      position: a;
+      top: 0;
+      .radio-group {
+        margin-bottom: 10px;
+        border: 1px solid #666;
+        border-radius: 8px;
+        font-size: 36px;
+        font-weight: bold;
+        max-width: 100%; /* 最大宽度为屏幕宽度 */
+    
+        .radio {
+          margin: 10px 10px;
+        }
       }
     }
-  
+    .btn{
+      margin-bottom: 10px;
+    }
     .list {
       .item {
         display: flex;
@@ -37,13 +35,13 @@
         margin-bottom: 10px;
   
         .name {
-          font-size: 28px;
+          font-size: 36px;
           font-weight: bold;
           width:50%;
         }
   
         .quantity {
-          font-size: 28px;
+          font-size: 36px;
           color: #666;
           width:15%;
           font-family: 'Times New Roman', Times, serif;
@@ -55,7 +53,7 @@
   
           .action-btn {
             margin-right: 10px;
-            font-size: 20px;
+            font-size: 24px;
             font-weight: bold;
             padding: 4px 8px;
             border-radius: 12px;
