--- a/src/pages/stock/index.scss
+++ b/src/pages/stock/index.scss
@@ -42,7 +42,7 @@
         font-size: 36px;
         font-weight: bold;
         width: 50%;
-        max-width: 50%;
+        //max-width: 50%;
         white-space: normal; /* 允许换行 */
       }
       
