--- a/src/pages/stock/stockOperation/index.scss
+++ b/src/pages/stock/stockOperation/index.scss
@@ -1,22 +1,6 @@
 .inventory-list {
   padding: 5px 20px;
   margin-bottom: 20px;
-
-  .operation-type{
-    margin-bottom: 20px;
-    display: flex;
-    .radiogroup{
-      
-      .radio{
-        margin-right: 15px;
-      }
-    }
-    
-    
-
-
-  }
-  
   .date-picker {
     display: flex;
     align-items: center;
@@ -38,24 +22,30 @@
     font-size: 18px;
     color: #333;
   }
-
-  .search-bar {
-    //clear: both;
+  .operation-type{
+    margin: 15px 0;
     display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
+    
+    .radiogroup{
+      
+      .radio{
+        margin-top: 15px;
+        margin-right: 15px;
+      }
+    }
+    
     .search-input {
-      flex: 1;
-      width: 60%;
+      //flex: 1;
+      width: 40%;
       height: 70px;
       padding: 0 12px;
-      margin-right: 10px;
+      //margin-right: 5px;
       border: 1px solid #ccc;
       border-radius: 18px;
     }
 
     .search-btn {
-      width: 30%;
+      width: 13%;
       height: 70px;
       line-height: 66px;
       text-align: center center;
@@ -63,7 +53,12 @@
       color: #fff;
       border-radius: 18px;
     }
+  
+    
+
+
   }
+  
 
   .list{
     
