--- a/src/pages/stock/stockAI/index.scss
+++ b/src/pages/stock/stockAI/index.scss
@@ -27,7 +27,7 @@
   }
 
   .table-cell.first-column {
-    flex: 3; /* 增加第一列的宽度比例 */
+    flex: 5; /* 增加第一列的宽度比例 */
   }
   
   .editable-cell {
@@ -44,4 +44,47 @@
   .cell-error{
     background-color: red;
   }
+  .data-table {
+    display: flex;
+    flex-direction: column;
+    gap: 12px; /* 每条记录之间的间距 */
+  }
   
+  .table-row {
+    width:96.5%;
+    display: flex;
+    flex-direction: column; /* 垂直排列两行 */
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  }
+  
+  .table-row-line {
+    display: flex;
+    gap: 16px; /* 每列之间的间距 */
+    margin-bottom: 8px; /* 第一行和第二行之间的间距 */
+  }
+  
+  .table-cell {
+    flex: 1; /* 每列平均分布 */
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+  
+  .first-column {
+    font-weight: bold;
+  }
+  
+  .cell-error {
+    border-color: red;
+    background-color: #ffecec;
+  }
+  .data-summary {
+    margin-bottom: 16px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #ec0909;
+    text-align: center; /* 居中对齐 */
+  }
